--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "~1.18.2",
     "bootstrap": "3.3.7",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "morgan": "~1.9.0",
+    "mysql2": "^1.5.3",
     "pug": "2.0.0-beta11",
-    "serve-favicon": "~2.4.5"
+    "sequelize": "^4.37.6",
+    "serve-favicon": "~2.4.5",
+    "superagent": "^3.8.2",
+    "xml2js": "^0.4.19"
   }
 }
